openmediavault (1.11) stable; urgency=low

  * Mantis 0001246: Bonded Interface with 802.3ad-style link aggregation
    problem.
  * Mantis 0001247: Fix division by zero in OMVSystem::getCPUStats().

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 20 Jan 2015 09:53:42 +0100

openmediavault (1.10) stable; urgency=low

  * Update locales.
  * Mantis 0001220: SMB/CIFS guest allowed (valid list).
  * Mantis 0001234: Power button doesn't work.
  * Mantis 0001239: Add feature to fail a drive in a mdadm array.
  * Mantis 0001243: Problems with german umlauts in shares.
  * Mantis 0001244: Improve the nginx monit configuration.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 08 Jan 2015 14:47:35 +0100

openmediavault (1.9) stable; urgency=low

  * Update locales.
  * Fix 'Gateway 502' error after manual installation of OMV.
  * Adapt OMV to CuBox-i.
  * Mantis 0001233: Add on crontab option @reboot.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 04 Jan 2015 00:10:44 +0100

openmediavault (1.8) stable; urgency=low

  * Update locales.
  * Improve omv-config command. Use --show to display the configuration
    data as JSON from the given XPath.
  * Mantis 0001141: smartd: Reference disks by ATA-/SCSI-Id.
  * Mantis 0001230: Filesystems (EXT4) need to be initialized as 64bit
    filesystems to be able to grow >16TiB. This is not supported on
    32bit systems.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 23 Dec 2014 19:20:45 +0100

openmediavault (1.7) stable; urgency=low

  * Update locales.
  * Display plugins and update packages in one page.
  * Improve PHP RPC backend.
  * Mantis 0001221: Add basic support for Btrfs.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 12 Dec 2014 02:56:34 +0100

openmediavault (1.6) stable; urgency=low

  * Update locales.
  * Display plugins sorted by their XB-Plugin-Section value.
  * Set correct permissions for SSH authorized_keys files.